First incremental commit for Heatmapper

--- a/es-419.lproj/Localizable.strings
+++ b/es-419.lproj/Localizable.strings
@@ -164,7 +164,7 @@
 
 /*
  Localizable.strings (Spanish)
- FIT
+ Heatmapper
 
  Created by Richard English on 11/01/2021.
  Copyright © 2021 Richard English. All rights reserved.
