--- a/fr.lproj/InfoPlist.strings
+++ b/fr.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* 
   InfoPlist.strings
-  FIT
+  Heatmapper
 
   Created by Richard English on 28/01/2021.
   Copyright © 2021 Richard English. All rights reserved.
