Refactoring, understand how colours work and radius generated

--- a/Heatmapper WatchKit App/es.lproj/Interface.strings
+++ b/Heatmapper WatchKit App/es.lproj/Interface.strings
@@ -60,3 +60,6 @@
 
 /* Class = "WKInterfaceLabel"; text = "Start Match"; ObjectID = "BuH-w6-PIL"; */
 "BuH-w6-PIL.text" = "Detección automática";
+
+/* Class = "WKInterfaceLabel"; text = "location"; ObjectID = "Kv1-9H-zBN"; */
+"Kv1-9H-zBN.text" = "";
