Map view added and working

--- a/Heatmapper/View/cy-GB.lproj/Main.strings
+++ b/Heatmapper/View/cy-GB.lproj/Main.strings
@@ -153,3 +153,6 @@
 
 /* Class = "UILabel"; text = "1"; ObjectID = "zWl-Nq-DLb"; */
 "zWl-Nq-DLb.text" = "1";
+
+/* Class = "UIButton"; normalTitle = "Start match"; ObjectID = "HkC-uM-bXg"; */
+"HkC-uM-bXg.normalTitle" = "";
