--- a/Heatmapper/View/fr.lproj/Main.strings
+++ b/Heatmapper/View/fr.lproj/Main.strings
@@ -154,5 +154,8 @@
 /* Class = "UILabel"; text = "1"; ObjectID = "zWl-Nq-DLb"; */
 "zWl-Nq-DLb.text" = "1";
 
-/* Class = "UIButton"; normalTitle = "Start match"; ObjectID = "HkC-uM-bXg"; */
+/* Class = "UIButton"; normalTitle = "Start Tracking"; ObjectID = "HkC-uM-bXg"; */
 "HkC-uM-bXg.normalTitle" = "";
+
+/* Class = "UIButton"; normalTitle = "Heatmap"; ObjectID = "uxy-2h-68R"; */
+"uxy-2h-68R.normalTitle" = "";
