--- a/Heatmapper/View/en.lproj/Main.strings
+++ b/Heatmapper/View/en.lproj/Main.strings
@@ -133,6 +133,9 @@
 /* Class = "UILabel"; text = "1"; ObjectID = "zWl-Nq-DLb"; */
 "zWl-Nq-DLb.text" = "1";
 
+/* Class = "UIViewController"; title = "Tracker"; ObjectID = "cbs-Dv-Qaf"; */
+"cbs-Dv-Qaf.title" = "";
+
 /* Class = "UISegmentedControl"; dhi-ac-byn.segmentTitles[0] = "Best for battery"; ObjectID = "dhi-ac-byn"; */
 "dhi-ac-byn.segmentTitles[0]" = "";
 
@@ -144,6 +147,9 @@
 
 /* Class = "UIButton"; normalTitle = "Start Tracking"; ObjectID = "HkC-uM-bXg"; */
 "HkC-uM-bXg.normalTitle" = "";
+
+/* Class = "UIButton"; normalTitle = "Stop Tracking"; ObjectID = "hKy-uJ-mHc"; */
+"hKy-uJ-mHc.normalTitle" = "";
 
 /* Class = "UISegmentedControl"; KZh-Fy-Ydb.segmentTitles[2] = "mins/km"; ObjectID = "KZh-Fy-Ydb"; */
 "KZh-Fy-Ydb.segmentTitles[2]" = "";
@@ -159,3 +165,6 @@
 
 /* Class = "UIButton"; normalTitle = "Heatmap"; ObjectID = "uxy-2h-68R"; */
 "uxy-2h-68R.normalTitle" = "";
+
+/* Class = "UIViewController"; title = "Heatmap"; ObjectID = "YiQ-y2-7yO"; */
+"YiQ-y2-7yO.title" = "";
