--- a/Heatmapper/View/es-419.lproj/Main.strings
+++ b/Heatmapper/View/es-419.lproj/Main.strings
@@ -163,8 +163,17 @@
 /* Class = "UILabel"; text = "Sets"; ObjectID = "oeg-Ph-BrI"; */
 "oeg-Ph-BrI.text" = "";
 
+/* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "onG-Ft-Fwy"; */
+"onG-Ft-Fwy.normalTitle" = "";
+
 /* Class = "UIButton"; normalTitle = "Heatmap"; ObjectID = "uxy-2h-68R"; */
 "uxy-2h-68R.normalTitle" = "";
+
+/* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "vYH-Sc-0gd"; */
+"vYH-Sc-0gd.normalTitle" = "";
+
+/* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "xKN-Nz-x6z"; */
+"xKN-Nz-x6z.normalTitle" = "";
 
 /* Class = "UIViewController"; title = "Heatmap"; ObjectID = "YiQ-y2-7yO"; */
 "YiQ-y2-7yO.title" = "";
