--- a/Heatmapper/View/fr.lproj/Main.strings
+++ b/Heatmapper/View/fr.lproj/Main.strings
@@ -154,6 +154,12 @@
 /* Class = "UILabel"; text = "1"; ObjectID = "zWl-Nq-DLb"; */
 "zWl-Nq-DLb.text" = "1";
 
+/* Class = "UILabel"; text = "Subtitle"; ObjectID = "2qh-aF-wqP"; */
+"2qh-aF-wqP.text" = "";
+
+/* Class = "UIButton"; normalTitle = "Workout History"; ObjectID = "ape-0k-33h"; */
+"ape-0k-33h.normalTitle" = "";
+
 /* Class = "UIViewController"; title = "Tracker"; ObjectID = "cbs-Dv-Qaf"; */
 "cbs-Dv-Qaf.title" = "";
 
@@ -162,6 +168,9 @@
 
 /* Class = "UIButton"; normalTitle = "Stop Tracking"; ObjectID = "hKy-uJ-mHc"; */
 "hKy-uJ-mHc.normalTitle" = "";
+
+/* Class = "UIViewController"; title = "Workout History"; ObjectID = "nCc-eF-wC1"; */
+"nCc-eF-wC1.title" = "";
 
 /* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "onG-Ft-Fwy"; */
 "onG-Ft-Fwy.normalTitle" = "";
@@ -177,3 +186,6 @@
 
 /* Class = "UIViewController"; title = "Heatmap"; ObjectID = "YiQ-y2-7yO"; */
 "YiQ-y2-7yO.title" = "";
+
+/* Class = "UILabel"; text = "Title"; ObjectID = "ZI9-5f-WrO"; */
+"ZI9-5f-WrO.text" = "";
