--- a/Heatmapper/View/en.lproj/Main.strings
+++ b/Heatmapper/View/en.lproj/Main.strings
@@ -169,8 +169,11 @@
 /* Class = "UILabel"; text = "Sets"; ObjectID = "oeg-Ph-BrI"; */
 "oeg-Ph-BrI.text" = "";
 
-/* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "onG-Ft-Fwy"; */
+/* Class = "UIButton"; normalTitle = "Flat Distinct"; ObjectID = "onG-Ft-Fwy"; */
 "onG-Ft-Fwy.normalTitle" = "";
+
+/* Class = "UIButton"; normalTitle = "Query"; ObjectID = "otY-60-lHh"; */
+"otY-60-lHh.normalTitle" = "";
 
 /* Class = "UILabel"; text = "Location accuracy"; ObjectID = "UKj-hg-nT8"; */
 "UKj-hg-nT8.text" = "";
@@ -178,7 +181,7 @@
 /* Class = "UIButton"; normalTitle = "Heatmap"; ObjectID = "uxy-2h-68R"; */
 "uxy-2h-68R.normalTitle" = "";
 
-/* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "vYH-Sc-0gd"; */
+/* Class = "UIButton"; normalTitle = "Radius Blurry"; ObjectID = "vYH-Sc-0gd"; */
 "vYH-Sc-0gd.normalTitle" = "";
 
 /* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "xKN-Nz-x6z"; */
