--- a/Heatmapper/View/en.lproj/Main.strings
+++ b/Heatmapper/View/en.lproj/Main.strings
@@ -34,6 +34,9 @@
 /* Class = "UINavigationItem"; title = "Settings"; ObjectID = "wkZ-fm-ijo"; */
 "wkZ-fm-ijo.title" = "Settings";
 
+/* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "8fa-ka-EKP"; */
+"8fa-ka-EKP.normalTitle" = "";
+
 /* Class = "UIButton"; normalTitle = "Workout History"; ObjectID = "ape-0k-33h"; */
 "ape-0k-33h.normalTitle" = "";
 
@@ -49,6 +52,9 @@
 /* Class = "UISegmentedControl"; dhi-ac-byn.segmentTitles[2] = "Best for accuracy"; ObjectID = "dhi-ac-byn"; */
 "dhi-ac-byn.segmentTitles[2]" = "";
 
+/* Class = "UIViewController"; title = "Heatmap"; ObjectID = "HIL-yj-uvc"; */
+"HIL-yj-uvc.title" = "";
+
 /* Class = "UIButton"; normalTitle = "Start Tracking"; ObjectID = "HkC-uM-bXg"; */
 "HkC-uM-bXg.normalTitle" = "";
 
@@ -57,6 +63,9 @@
 
 /* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "KhR-k9-Udq"; */
 "KhR-k9-Udq.normalTitle" = "";
+
+/* Class = "UIButton"; normalTitle = "Radius Blurry"; ObjectID = "kkP-wz-qdj"; */
+"kkP-wz-qdj.normalTitle" = "";
 
 /* Class = "UISegmentedControl"; KZh-Fy-Ydb.segmentTitles[2] = "mins/km"; ObjectID = "KZh-Fy-Ydb"; */
 "KZh-Fy-Ydb.segmentTitles[2]" = "";
@@ -72,6 +81,9 @@
 
 /* Class = "UIViewController"; title = "Heatmap"; ObjectID = "Pbk-vr-61V"; */
 "Pbk-vr-61V.title" = "";
+
+/* Class = "UIButton"; normalTitle = "Flat Distinct"; ObjectID = "qUW-ZW-8kZ"; */
+"qUW-ZW-8kZ.normalTitle" = "";
 
 /* Class = "UIButton"; normalTitle = "Flat Distinct"; ObjectID = "R6w-n5-X7X"; */
 "R6w-n5-X7X.normalTitle" = "";
