--- a/Heatmapper/View/fr.lproj/Main.strings
+++ b/Heatmapper/View/fr.lproj/Main.strings
@@ -52,11 +52,17 @@
 /* Class = "UINavigationItem"; title = "Settings"; ObjectID = "wkZ-fm-ijo"; */
 "wkZ-fm-ijo.title" = "Réglages";
 
+/* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "8fa-ka-EKP"; */
+"8fa-ka-EKP.normalTitle" = "";
+
 /* Class = "UIButton"; normalTitle = "Workout History"; ObjectID = "ape-0k-33h"; */
 "ape-0k-33h.normalTitle" = "";
 
 /* Class = "UIViewController"; title = "Tracker"; ObjectID = "cbs-Dv-Qaf"; */
 "cbs-Dv-Qaf.title" = "";
+
+/* Class = "UIViewController"; title = "Heatmap"; ObjectID = "HIL-yj-uvc"; */
+"HIL-yj-uvc.title" = "";
 
 /* Class = "UIButton"; normalTitle = "Start Tracking"; ObjectID = "HkC-uM-bXg"; */
 "HkC-uM-bXg.normalTitle" = "";
@@ -67,6 +73,9 @@
 /* Class = "UIButton"; normalTitle = "Radius Distinct"; ObjectID = "KhR-k9-Udq"; */
 "KhR-k9-Udq.normalTitle" = "";
 
+/* Class = "UIButton"; normalTitle = "Radius Blurry"; ObjectID = "kkP-wz-qdj"; */
+"kkP-wz-qdj.normalTitle" = "";
+
 /* Class = "UIViewController"; title = "Workout History"; ObjectID = "nCc-eF-wC1"; */
 "nCc-eF-wC1.title" = "";
 
@@ -75,6 +84,9 @@
 
 /* Class = "UIViewController"; title = "Heatmap"; ObjectID = "Pbk-vr-61V"; */
 "Pbk-vr-61V.title" = "";
+
+/* Class = "UIButton"; normalTitle = "Flat Distinct"; ObjectID = "qUW-ZW-8kZ"; */
+"qUW-ZW-8kZ.normalTitle" = "";
 
 /* Class = "UIButton"; normalTitle = "Flat Distinct"; ObjectID = "R6w-n5-X7X"; */
 "R6w-n5-X7X.normalTitle" = "";
