Improved the Saved Heatmap (as it's now called) UI somewhat

--- a/Heatmapper/View/en.lproj/Main.strings
+++ b/Heatmapper/View/en.lproj/Main.strings
@@ -106,17 +106,11 @@
 /* Class = "UIViewController"; title = "Workout History"; ObjectID = "nCc-eF-wC1"; */
 "nCc-eF-wC1.title" = "";
 
-/* Class = "UIButton"; normalTitle = "Button 1"; ObjectID = "nV8-2G-6RS"; */
-"nV8-2G-6RS.normalTitle" = "";
-
 /* Class = "UIButton"; normalTitle = "JD"; ObjectID = "Nzm-xV-84i"; */
 "Nzm-xV-84i.normalTitle" = "";
 
 /* Class = "UIViewController"; title = "Heatmap"; ObjectID = "Pbk-vr-61V"; */
 "Pbk-vr-61V.title" = "";
-
-/* Class = "UIButton"; normalTitle = "Buton 2"; ObjectID = "Pox-VV-z2k"; */
-"Pox-VV-z2k.normalTitle" = "";
 
 /* Class = "UIButton"; normalTitle = "Flat Distinct"; ObjectID = "qUW-ZW-8kZ"; */
 "qUW-ZW-8kZ.normalTitle" = "";
@@ -139,9 +133,6 @@
 /* Class = "UIButton"; normalTitle = "RE"; ObjectID = "tKC-sN-5NG"; */
 "tKC-sN-5NG.normalTitle" = "";
 
-/* Class = "UIButton"; normalTitle = "Button 3"; ObjectID = "tsO-zO-cLZ"; */
-"tsO-zO-cLZ.normalTitle" = "";
-
 /* Class = "UIButton"; normalTitle = "View Heatmap"; ObjectID = "tZd-9k-xak"; */
 "tZd-9k-xak.normalTitle" = "";
 
@@ -160,9 +151,6 @@
 /* Class = "UILabel"; text = "Calories"; ObjectID = "VUK-Or-FM5"; */
 "VUK-Or-FM5.text" = "";
 
-/* Class = "UIViewController"; title = "Heatmap"; ObjectID = "W9C-nA-RXS"; */
-"W9C-nA-RXS.title" = "";
-
 /* Class = "UILabel"; text = "Event"; ObjectID = "WjU-FP-pZm"; */
 "WjU-FP-pZm.text" = "";
 
@@ -172,7 +160,7 @@
 /* Class = "UINavigationItem"; title = "RE Heatmap"; ObjectID = "xJf-j7-wii"; */
 "xJf-j7-wii.title" = "";
 
-/* Class = "UILabel"; text = "Average Heart Rate"; ObjectID = "XTV-DW-FFR"; */
+/* Class = "UILabel"; text = "Heart Rate"; ObjectID = "XTV-DW-FFR"; */
 "XTV-DW-FFR.text" = "";
 
 /* Class = "UIButton"; normalTitle = "DTM"; ObjectID = "Y4b-e5-pge"; */
@@ -187,5 +175,5 @@
 /* Class = "UINavigationItem"; title = "RE Heatmap"; ObjectID = "yQa-XH-y2d"; */
 "yQa-XH-y2d.title" = "";
 
-/* Class = "UILabel"; text = "Average Speed"; ObjectID = "yYq-TM-45H"; */
+/* Class = "UILabel"; text = "Pace"; ObjectID = "yYq-TM-45H"; */
 "yYq-TM-45H.text" = "";
